fix flickering

--- a/oneaffiniti/customstyle.css
+++ b/oneaffiniti/customstyle.css
@@ -7,12 +7,14 @@ body {
 .scrollNav {
 	position: fixed;
 	max-width:  350px;
-	transition: all 0.5s ease;
+	transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
 
 .scrollNavtotop {
 	top: 120px;
-	transition: all 0.5s ease;
+	transform: translateZ(0);
+  -webkit-transform: translateZ(0);
 }
 
 .scrollMenu li a {
